Fix wrong background image

--- a/2023/css/theme-glossy.css
+++ b/2023/css/theme-glossy.css
@@ -57,7 +57,8 @@ body {
     #shop>.container,
     #help>.container,
     #settings-desktop>.container {
-        background-image: url("/assets/backgrounds/yenn-mountains-1-blur.jpg");
+        background-image: url("/assets/backgrounds/yenn-sea-1-blur.jpg"); 
+        /* background-image: url("/assets/backgrounds/yenn-mountains-1-blur.jpg"); */
         background-size: 100vw 100vh;
         background-attachment: fixed;
         -webkit-box-shadow: 2px 5px 20px -11px rgba(66, 68, 90, 1) !important;
